# rag-qa-engine

./: .dockerignore  .gitignore  .venv-linux  Dockerfile.backend  Dockerfile.frontend  README.md  config.yaml  docker-compose.yml  entrypoint.sh  logger.py  main.py  pyproject.toml  railway.frontend.toml  railway.toml  requirements.txt
bridge/: bindings.py
chunking/: chunker.py
docker/: nginx.conf  nginx.railway.conf
eval/: metrics.py  results.json
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  EvalDashboard.jsx
pipeline/: cleaner.py  embedder.py  faiss_store.py  groq_llm.py  parser.py  reranker.py  retrieval.py
rag-core/: Cargo.toml
rag-core/src/: lib.rs
rag-core/src/bm25/: index.rs  mod.rs  scorer.rs
rag-core/src/chunking/: mod.rs
rag-core/src/ingestion/: mod.rs
scripts/: bake_models.py
